[gd_scene load_steps=14 format=3 uid="uid://vqb6ytoeqw0p"]

[ext_resource type="Script" path="res://Scripts/Sluggy.gd" id="1_6a0vb"]
[ext_resource type="PackedScene" uid="uid://cblmp7va6vok7" path="res://Scenes/health_component.tscn" id="2_7xbi6"]
[ext_resource type="PackedScene" uid="uid://pd81rn3yuvqq" path="res://Scenes/hit_box_component.tscn" id="3_p4ugw"]
[ext_resource type="PackedScene" uid="uid://2r7ys3f61gcr" path="res://Assets/Models/Slug.glb" id="4_qwcjg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ngesx"]
albedo_color = Color(0.0941176, 0.403922, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_kxrm6"]
material = SubResource("StandardMaterial3D_ngesx")
radius = 0.3
height = 0.6

[sub_resource type="SphereMesh" id="SphereMesh_e2338"]
material = SubResource("StandardMaterial3D_ngesx")
height = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_j26i5"]
size = Vector3(0.617432, 0.474243, 0.855408)

[sub_resource type="BoxShape3D" id="BoxShape3D_nh1k3"]
size = Vector3(0.401367, 0.440796, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xom5t"]
bg_color = Color(0, 0, 0, 0.396078)

[sub_resource type="Gradient" id="Gradient_qsg76"]
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.637131)
colors = PackedColorArray(0, 0, 0, 1, 0.839216, 0.176471, 0.321569, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_idk8e"]
gradient = SubResource("Gradient_qsg76")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lod1o"]
texture = SubResource("GradientTexture1D_idk8e")

[node name="Sluggy" type="CharacterBody3D" groups=["player"]]
collision_mask = 32
script = ExtResource("1_6a0vb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_kxrm6")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.203634, 0)
visible = false
mesh = SubResource("SphereMesh_e2338")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00764847, 0.177439)
shape = SubResource("BoxShape3D_j26i5")

[node name="CamPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.277406, 0)

[node name="Camera3D" type="Camera3D" parent="CamPivot"]
transform = Transform3D(1, 0, 0, 0, 0.906352, 0.422523, 0, -0.422523, 0.906352, 0, 1.87301, 3.74579)
current = true

[node name="BulletSpawnLocation" type="Marker3D" parent="."]

[node name="HealthComponent" parent="." node_paths=PackedStringArray("health_bar") instance=ExtResource("2_7xbi6")]
max_health = 100
health_bar = NodePath("../CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HealthBar")

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_p4ugw")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBoxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0222778, 0)
shape = SubResource("BoxShape3D_nh1k3")

[node name="Slug" parent="." instance=ExtResource("4_qwcjg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.499417, 0)

[node name="Skeleton3D" parent="Slug/SlugArmature" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, -1.49012e-08, 0, 1.49012e-08, 1, 0, -0.163893, -2.23326)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xom5t")
theme_override_styles/fill = SubResource("StyleBoxTexture_lod1o")
value = 100.0
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[editable path="Slug"]
